gitops/pulsar/base/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-resources-operator
  namespace: pulsar
  labels:
    app.kubernetes.io/name: pulsar-resources-operator
    app.kubernetes.io/part: pulsar
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pulsar-resources-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pulsar-resources-operator
    spec:
      serviceAccountName: pulsar-resources-operator
      terminationGracePeriodSeconds: 10
      containers:
        - name: manager
          image: docker.io/streamnative/pulsar-resources-operator:v0.21.0
          imagePullPolicy: IfNotPresent
          args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=0.0.0.0:8443
            - --leader-elect
            - --resync-period=10
            - --retry-count=5
          command:
            - /manager
          ports:
            - containerPort: 8443
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
