gitops/pulsar/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pulsar-ingress
  namespace: pulsar
  labels:
    app.kubernetes.io/name: pulsar-network-policy
    app.kubernetes.io/part: pulsar
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part: pulsar
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pulsar
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hpdc-platform
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - ipBlock:
        cidr: 172.18.0.0/16
